# GameOfLife

./: CMakeLists.txt  README.md  all.h  main.c  misc.c  multi_process.c  singleProcess.c
